--- a/src/Components/SectionFour/Card/Card.module.scss
+++ b/src/Components/SectionFour/Card/Card.module.scss
@@ -8,6 +8,7 @@
 	padding: 1.5rem 1.5rem;
 	background-image: $card-gradient;
 	border-radius: $border-rad;
+	margin: 5px;
 
 	&_Images {
 		overflow: hidden;
