--- a/src/Components/Button/Button.module.scss
+++ b/src/Components/Button/Button.module.scss
@@ -9,3 +9,9 @@
 	border: none;
 	padding: 1rem 2rem;
 }
+
+@media only screen and (max-width: 400px) {
+	.Button {
+		padding: 0.75rem 1.25rem;
+	}
+}
