--- a/src/index.scss
+++ b/src/index.scss
@@ -25,3 +25,9 @@ ul {
 	background-color: $bg-main-color;
 	color: $text-color;
 }
+
+@media only screen and (max-width: 400px) {
+	#root {
+		padding: 1rem;
+	}
+}
