--- a/src/Sass/_Variables.scss
+++ b/src/Sass/_Variables.scss
@@ -16,6 +16,7 @@ $text-gradient: linear-gradient(91.57deg, #C0B7E8 -1.02%, #8176AF 36.25%);
 $border-rad: 40px;
 $border-rad-section: 90px;
 $border-rad-sectionFive: 160px;
+$border-rad-Form: 100px;
 
 //Font-weight
 $fw-exLight: 200;
