--- a/src/Components/Header/Menu/Menu.module.scss
+++ b/src/Components/Header/Menu/Menu.module.scss
@@ -20,4 +20,59 @@
 		color: $text-color;
 		font-weight: $fw-Bold;
 	}
+
+	&_Icon {
+		display: none;
+	}
+}
+
+
+@media only screen and (max-width: 600px) {
+	.Navbar {
+		&_Menu {
+			width: 100%;
+			height: 100vh;
+			display: flex;
+			flex-flow: column;
+			justify-content: center;
+			align-items: center;
+			gap: 25px;
+			position: fixed;
+			left: -100%;
+			top: 0%;
+			bottom: 0%;
+			right: 0%;
+			background-color: rgb(12, 10, 39);
+			color: #fff;
+			z-index: 1;
+			transition: left 800ms ease;
+		}
+
+		&_MenuLink {
+			font-size: $fs-xxxl;
+		}
+
+		.actvie_menu {
+			left: 0%;
+		}
+
+		&_Icon {
+			color: $icon-color;
+			position: absolute;
+			top: 30px;
+			right: 0px;
+			display: block;
+			z-index: 99;
+			font-size: $fs-xxxl;
+		}
+	}
+}
+
+@media only screen and (max-width: 400px) {
+
+	.Navbar {
+		&_Icon {
+			top: 10px;
+		}
+	}
 }
