--- a/src/index.scss
+++ b/src/index.scss
@@ -7,6 +7,27 @@
 	box-sizing: border-box;
 }
 
+html {
+	scroll-behavior: smooth;
+	scroll-padding-top: 20px;
+
+	&::-webkit-scrollbar-track {
+		-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+		border-radius: 10px;
+		//background-color: #F5F5F5;
+	}
+
+	&::-webkit-scrollbar {
+		width: 12px;
+		background-color: rgb(255, 255, 255, 0.3);
+	}
+
+	&::-webkit-scrollbar-thumb {
+		-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
+		background-color: $icon-color;
+	}
+}
+
 body {
 	font-family: 'Montserrat', sans-serif;
 }
