--- a/src/Components/SectionSeven/SectionSeven.module.scss
+++ b/src/Components/SectionSeven/SectionSeven.module.scss
@@ -10,6 +10,7 @@
 	flex-flow: column nowrap;
 	justify-content: center;
 	align-items: center;
+	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 
 	&_Title {
 		font-size: $fs-xxxl;
