--- a/src/Components/SectionSix/SectionSix.module.scss
+++ b/src/Components/SectionSix/SectionSix.module.scss
@@ -1,4 +1,5 @@
 .SectionSix {
+	position: relative;
 	padding-block: 3rem;
 	display: flex;
 	flex-direction: column;
@@ -7,5 +8,34 @@
 	&_Slider {
 		width: 100%;
 		text-align: center;
+	}
+
+	&_Arrows {
+		display: none;
+		justify-content: space-between;
+		width: 100%;
+		height: 100%;
+	}
+
+	&_Next {
+		position: absolute;
+		z-index: 1;
+		bottom: 20%;
+		left: -20px;
+	}
+
+	&_Prev {
+		position: absolute;
+		z-index: 1;
+		bottom: 20%;
+		right: -20px;
+	}
+}
+
+@media only screen and (max-width: 1024px) {
+	.SectionSix {
+		&_Arrows {
+			display: flex;
+		}
 	}
 }
